add google doc link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>My Embedded Google Doc</h1>
     <iframe 
-        src="YOUR_GOOGLE_DOC_URL" 
+        src="https://docs.google.com/document/d/e/2PACX-1vQwHFhtKqVYpB8H8oFkm7CmGYOK8TxKLVkrVPNqdaZnqKyrKAaCMM1dXjot_ykHycxvzdNN2aHNfiJH/pub"
         width="100%" 
         height="800" 
         frameborder="0" 
@@ -16,3 +16,4 @@
     </iframe>
 </body>
 </html>
+
