--- a/public/index.html
+++ b/public/index.html
@@ -207,6 +207,9 @@
             <div class="gallery-item">
                 <img src="images/hallway.jpeg" alt="Hallway">
             </div>
+            <div class="gallery-item">
+                <img src="images/parking.jpeg" alt="Parking">
+            </div>
         </div>
 
         <div class="address-section">
