--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
                 <div>• HOA: $300</div>
                 <div>• Electric: ~$350</div>
                 <div>• Water: ~$25</div>
-                <div>• Annual Insurance: $3,900</div>
+                <div>• Annual Building Insurance: $3,900</div>
                 <div>• Annual Taxes: $1,600</div>
                 </div>
             </div>
