--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
             <div style="font-size: 0.8em; margin-top: 10px; color: #666;">For Sale by Owner</div>
         </div>
         
-        <a href="mailto:condadotower@gmail.com" class="contact-button">Contact Owner</a>
+        <a href="mailto:condo@code.pr" class="contact-button">Contact Owner</a>
 
         <div class="details-grid">
             <div class="detail-box">
