--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Condado Tower Apartment for Sale</title>
+    <title>Luxury Condado Tower Apartment for Sale</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -137,7 +137,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Condado Tower Apartment for Sale - $800,000</h1>
+        <h1>Stunning Condado Tower Apartment - $800,000</h1>
 
         <div class="price-banner">
             3 Bedroom / 3 Bathroom Condo
