--- a/public/index.html
+++ b/public/index.html
@@ -177,7 +177,7 @@
             <div>• Outdoor balcony with ocean views</div>
             <div>• Electric roller shades</div>
             <div>• 4 mini-split AC units</div>
-            <div>• Flood-safe garage location</div>
+            <div>• Flood-safe secure garage located under building</div>
             <div>• Common elevator lobby with storage</div>
             <div>• Only 2 units per floor</div>
         </div>
