--- a/public/index.html
+++ b/public/index.html
@@ -154,6 +154,7 @@
                 <div>• Previously rented for $5,000 per month (excellent income potential)</div>
                 <div>• 15th Floor, South Unit</div>
                 <div>• City Facing with Ocean Views</div>
+                <div>• 1,441 square feet</div>
             </div>
 
             <div class="detail-box">
