--- a/public/index.html
+++ b/public/index.html
@@ -179,7 +179,7 @@
                     <img src="images/40gig-300x210.png" alt="4 Gigabit Speed" style="height: 30px; width: auto;">
                 </a>
             </div>
-            <div>• Fully furnished</div>
+            <div>• Fully furnished, including cookware and linens</div>
             <div>• Master bedroom with walk-in closet, ensuite bathroom, Japanese toilet</div>
             <div>• Outdoor balcony with ocean views</div>
             <div>• Electric roller shades</div>
@@ -187,6 +187,8 @@
             <div>• Flood-safe secure garage located under building</div>
             <div>• Common elevator lobby with storage</div>
             <div>• Only 2 units per floor</div>
+            <div>• No short term rental, 6 month minimum lease allowed</div>
+
         </div>
 
         <div class="gallery-grid">
